doc/logfile.txt
Class documentation
<---- javadoc command: ---->
C:\Program Files (x86)\BlueJ\jdk\bin\javadoc.exe
-author
-version
-nodeprecated
-package
-noindex
-notree
-nohelp
-nonavbar
-source
1.8
-classpath
C:\Program Files (x86)\BlueJ\lib\bluejcore.jar;C:\Program Files (x86)\BlueJ\lib\junit-4.8.2.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-core.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-device.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-gpio-extension.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-service.jar;C:\Users\wow\Documents\GitHub\JBank
-d
C:\Users\wow\Documents\GitHub\JBank\doc
-encoding
UTF-8
-charset
UTF-8
-docletpath
C:\Program Files (x86)\BlueJ\lib\bjdoclet.jar
-doclet
bluej.doclet.doclets.formats.html.HtmlDoclet
C:\Users\wow\Documents\GitHub\JBank\AmountOverDrawnException.java
<---- end of javadoc command ---->
Loading source file C:\Users\wow\Documents\GitHub\JBank\AmountOverDrawnException.java...
C:\Users\wow\Documents\GitHub\JBank\AmountOverDrawnException.java:10: error: ';' expected
    int j-0;
         ^
C:\Users\wow\Documents\GitHub\JBank\AmountOverDrawnException.java:38: error: 'else' without 'if'
        else if(account instanceof Savings)
        ^
2 errors
